# semver

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  Semver.cpp  Semver.h  main.cpp  makefile
include/: version.hpp
scripts/: run-tests.sh
src/: semver.hpp
test/: main.test.cpp  makefile  test.cpp  version.test.cpp
